fix spacing on food details

--- a/src/containers/User/User.css
+++ b/src/containers/User/User.css
@@ -53,6 +53,10 @@
     width: 100%;
 }
 
+.food-list {
+    width: 100%;
+}
+
 .user-food {
     color: #d15555;
     text-transform: uppercase;
